# imagemicro

./: Cargo.toml  build.rs  optimization_ideas.txt
benches/: process_benchmark.rs
proto/: imager.proto
src/: client.rs  server.rs
src/enums/: image_processing_error.rs  mod.rs
src/services/: editor_service.rs  grpc_service.rs  image_processing_service.rs  mod.rs
