[package]
name = "imagemicro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image-client"
path = "src/client.rs"

[[bin]]
name = "image-server"
path = "src/server.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
image = "0.24.7"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "process_benchmark"
harness = false

[build-dependencies]
tonic-build = "0.7"

[profile.release]
debug = true
